<resources>
    <string name="app_name">cycleclubAPP</string>

    <string name="title_section1">모임 등록</string>
    <string name="title_section2">모임 목록</string>
    <string name="title_section3">모임 디테일</string>
    <string name="title_section4">모임 수정</string>
    <string name="login_error">로그인을 하셔야 모임에 참여 하실 수 있습니다.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_updateclub">UpdateclubActivity</string>
    <string name="title_activity_join">JoinActivity</string>
    <string name="wheretext">Where</string>
    <string name="titletext">Title</string>
    <string name="titlehint">모임이름</string>
    <string name="whentext">When</string>
    <string name="whotext">Who</string>
    <string name="updatetext">수정</string>
    <string name="savetext">저장</string>
    <string name="resettext">취소</string>
    <string name="action_example">목록으로</string>
    <string name="action_settings">Settings</string>

    <string name="insert">새 모임 등록</string>

    <string name="find">조회</string>

    <string name="clubname">모임명</string>
    <string name="title_activity_insert">insertActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_list">listActivity</string>
    <string name="title_activity_detail">detailActivity</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="place">Place</string>
    <string name="master">Master</string>
    <string name="empty">Empty</string>
    <string name="join">모임참가</string>
    <string name="unjoin">모임취소</string>
    <string name="clubcode">Club Code</string>
    <string name="title_activity_update">updateActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="update">수정</string>
    <string name="delete_club">모임종료</string>
</resources>