<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_detail"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/text_color"
    tools:context=".MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/text_color"
        tools:context="com.example.lsh.cycleclubapp.DetailActivity"
        android:id="@+id/container_detail">


        <LinearLayout
            android:orientation="horizontal"
            android:background="@color/text_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/title"
                    android:id="@+id/title_name"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:id="@+id/title_data"
                    android:text="@string/empty"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/clubcode"
                    android:id="@+id/club_code" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/empty"
                    android:id="@+id/code_data" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/place"
                    android:id="@+id/Place_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/empty"
                    android:id="@+id/place_data" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/time"
                    android:id="@+id/time_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/empty"
                    android:id="@+id/time_data" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/master"
                    android:id="@+id/master_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/empty"
                    android:id="@+id/master_data" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="89dp"
                    android:gravity="center">

                    <ToggleButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@color/action_color"
                        android:textOn="@string/unjoin"
                        android:textOff="@string/join"
                        android:textSize="15sp"
                        android:textColor="@color/text_color"
                        android:id="@+id/join_bt"
                        android:checked="false" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/text_color"
                        android:text="@string/update"
                        android:textSize="15sp"
                        android:textColor="@color/action_color"
                        android:id="@+id/update_bt" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
    <fragment android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
        android:layout_gravity="start"

        android:name="com.example.lsh.cycleclubapp.NavigationDrawerFragment"

        tools:layout="@layout/fragment_navigation_drawer" />
</android.support.v4.widget.DrawerLayout>