<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_insert"
    android:background="@color/text_color"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/text_color"
    android:layout_height="match_parent"  android:id="@+id/container_insert">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="64dp"
                android:layout_marginLeft="16dp"
                android:text="@string/titletext"
                android:textSize="25sp"
                android:textColor="#BDBDBD"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColorHint="#000000"
                android:ems="10"
                android:textSize="25sp"
                android:hint="@string/titlehint"  />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/whereText"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:text="@string/wheretext"
                android:textColor="#BDBDBD"
                android:textSize="20sp"  />

            <EditText
                android:id="@+id/whereEdit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/whenText"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:text="@string/whentext"
                android:textColor="#BDBDBD"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/dateEdit"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="8dp"
                android:ems="8"
                android:hint="ex) 2015 01-01" />

            <EditText
                android:id="@+id/timeEdit"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="ex) 12:00" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/whoText"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:text="Who"
                android:textColor="#BDBDBD"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/whoEditFix"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@+id/whoText"
                android:text="작성자"
                android:textColor="#000000"
                android:textSize="20sp"
                android:enabled="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:gravity="right">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/savetext"
                android:textColor="@color/text_color"
                android:background="@color/action_color"
                android:id="@+id/saveButton" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/text_color"
                android:textColor="@color/action_color"
                android:text="@string/resettext"
                android:id="@+id/resetButton" />
        </LinearLayout>

    </TableLayout>

</LinearLayout>
    <fragment android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
        android:layout_gravity="start"

        android:name="com.example.lsh.cycleclubapp.NavigationDrawerFragment"

        tools:layout="@layout/fragment_navigation_drawer" />
</android.support.v4.widget.DrawerLayout>